# healthcare-data-system

./: .gitignore  README.md  asset-manifest.json  index.html  package.json
contract/: Cargo.toml  build.sh  near-cli.md
contract/src/: account.rs  lib.rs  storage.rs
contract/wasm/: unified_healthcare_contract.wasm
src/: App.js  index.js
src/components/: AccountInfo.js  DataEntry.js
src/utils/: config.js  contract.js  cryptography.js  near.js
static/js/: 2.2499df60.chunk.js  2.2499df60.chunk.js.LICENSE.txt  2.2499df60.chunk.js.map  main.9edc1521.chunk.js  main.9edc1521.chunk.js.map  runtime-main.3f3f195e.js  runtime-main.3f3f195e.js.map
